<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sdk_rec">7</string>
    <string name="sdk_min">6</string>
    
    <string name="app_name">VDRControl</string>

<string name="yes">Ja</string>
<string name="no">Nein</string>
<string name="cancel">Abbrechen</string>    
<string name="ok">Ok</string>
<string name="switchc">Umschalten</string>
<string name="record">Aufzeichnen</string>
<string name="info">Infos</string>

<string name="no_server">Keine VDR-Server eingerichtet!</string>
<string name="new_server">Neue VDR-Verbindung hinzufügen</string>
<string name="new_server_add">Hinzufügen</string>
<string name="new_server_host">Hostname oder IP:</string>
<string name="new_server_name">Name der Verbindung</string>
<string name="new_server_port">SVDRP/eSVDRP-Port</string>
<string name="new_server_esvdrp">eSVDRP aktivieren</string>

<string name="new_server_key">Schlüssel</string>
<string name="new_server_mishost">Name oder Host fehlt!</string>
<string name="new_server_exists">Eintrag exisitert bereits!</string>
<string name="new_server_invkey">Schlüssel ist nicht exakt 8 Zeichen!</string>
<string name="new_server_added">hinzugefügt!</string> 

<string name="del_server_alert">Verbindung #NAME# löschen?</string>
<string name="del_server">Verbindung entfernen</string>

<string name="show_chans_load">Lade VDR-Kanalliste...</string>
<string name="show_disk">VDR Status - #DISK# Speicher belegt</string>
<string name="show_status">VDR Status</string>
<string name="show_getdata">Hole Daten...</string>

<string name="program">Programm</string>
<string name="currun">Es läuft</string>


<string name="selectvdr_add">Neue VDR-Verbindung anlegen?</string>
<string name="selectvdr_menu_add">Neue VDR-Verbindung</string>
<string name="selectvdr_menu_del">VDR-Verbindung entfernen</string>

<string name="timers">Timer</string>
<string name="timers_inactive">Inaktiv</string>
<string name="timers_active">Aktiv</string>
<string name="timers_recording">Zeichnet auf</string>
<string name="timers_notimer">Keine Timer vorhanden</string>

<string name="timerinfo">Timer bearbeiten</string>
<string name="timerinfo_active">Timer aktiv</string>
<string name="timerinfo_date">Datum</string>
<string name="timerinfo_time">Zeit</string>
<string name="timerinfo_del">Timer löschen</string>
<string name="timerinfo_title">Titel</string>
<string name="timerinfo_alert">Timer wirklich löschen?</string>
<string name="timerinfo_changed">Timer geändert</string>
<string name="timerinfo_timeerr">Startzeit grösser Endzeit</string>

<string name="records">Aufnahmen</string>
<string name="records_play_begin">Ab Anfang wiedergeben</string>

<string name="dstatus_version">VDR Version</string>
<string name="dstatus_disk">Freier Speicher</string>
<string name="dstatus_device">Aktuelles Gerät</string>
<string name="dstatus_channel">Aktueller Sender</string>
<string name="dstatus_signal">Signalstärke</string>
<string name="dstatus_stream">Datenstrom (Video/Audio)</string>
<string name="dstatus_nofemon">femon Plugin nicht installiert!</string>

<string name="toast_blocked">VDR-Interface blockiert!</string>
<string name="toast_denied">VDR weist Verbindung ab</string>
<string name="toast_switch_chan">Wechsle Kanal...</string>
<string name="toast_record">Aufnahme angelegt</string>
<string name="toast_norecords">Keine Aufnahmen vorhanden</string>

</resources>
