<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_server_name"/>   
<EditText
    android:id="@+id/new_server_name_edit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/editbox_background"/>

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/new_server_host"/>   
<EditText
    android:id="@+id/new_server_host_edit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/editbox_background"/>

<Button
	android:id="@+id/new_server_add"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/new_server_add" />
  
  



</LinearLayout>
