<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >
 
<TextView 
android:text="@string/dstatus_version"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="16sp"
style="@android:style/TextAppearance.Large"
/>

<TextView 
android:id="@+id/dstatus_version_v" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="12sp"
style="@android:style/TextAppearance.Small"
/> 
 
<View 
    android:layout_width="fill_parent" 
    android:layout_height="2dp" 
    android:background="#FFFFFF" 
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    
    /> 

<TextView 
android:text="@string/dstatus_disk" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="16sp"
style="@android:style/TextAppearance.Large"
/>

<TextView 
android:id="@+id/dstatus_disk_v" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="12sp"
style="@android:style/TextAppearance.Small"
/> 
 
<View 
    android:layout_width="fill_parent" 
    android:layout_height="2dp" 
    android:background="#FFFFFF" 
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    
    /> 

<TextView 
android:text="@string/dstatus_device" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="16sp"
style="@android:style/TextAppearance.Large"
/>

<TextView 
android:id="@+id/dstatus_device_v" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="12sp"
style="@android:style/TextAppearance.Small"
/> 
 
<View 
    android:layout_width="fill_parent" 
    android:layout_height="2dp" 
    android:background="#FFFFFF" 
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    
    /> 

<TextView 
android:text="@string/dstatus_channel" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="16sp"
style="@android:style/TextAppearance.Large"
/>

<TextView 
android:id="@+id/dstatus_channel_v" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="12sp"
style="@android:style/TextAppearance.Small"
/> 
 
<View 
    android:layout_width="fill_parent" 
    android:layout_height="2dp" 
    android:background="#FFFFFF" 
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
   /> 

<TextView 
android:text="@string/dstatus_signal" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="16sp"
style="@android:style/TextAppearance.Large"
/>

<TextView 
android:id="@+id/dstatus_signal_v" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:textSize="12sp"
style="@android:style/TextAppearance.Small"
/> 
 
<View 
    android:layout_width="fill_parent" 
    android:layout_height="2dp" 
    android:background="#FFFFFF" 
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    
    /> 
    


</LinearLayout>
